--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
         "formik": "^1.5.8",
         "highcharts": "^7.2.0",
         "history": "^4.9.0",
+        "i18next": "^20.1.0",
         "lodash": "^4.17.15",
         "patch-package": "^6.4.7",
         "postinstall-postinstall": "^2.1.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-i18next": "^11.8.12",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
