--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react-hooks": "^1.7.0",
         "husky": "^3.0.2",
+        "i18next-parser": "^3.7.0",
         "jest-fetch-mock": "^2.1.2",
         "lint-staged": "^9.2.1",
         "mockdate": "^2.0.5",
