--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
+        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+        "i18n:parse": "i18next"
     },
     "jest": {
         "collectCoverageFrom": [
