--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "highcharts": "^7.2.0",
         "history": "^4.9.0",
         "i18next": "^20.1.0",
+        "i18next-browser-languagedetector": "^6.1.0",
         "lodash": "^4.17.15",
         "patch-package": "^6.4.7",
         "postinstall-postinstall": "^2.1.0",
