--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@onaio/connected-private-route": "^0.0.8",
         "@onaio/connected-reducer-registry": "^0.0.1",
         "@onaio/drill-down-table": "^0.0.21",
-        "@onaio/gatekeeper": "^0.0.16",
+        "@onaio/gatekeeper": "^0.1.1",
         "@onaio/list-view": "^0.0.2",
         "@onaio/loaders": "^0.0.1",
         "@onaio/redux-reducer-registry": "^0.0.8",
@@ -28,6 +28,8 @@
         "highcharts": "^7.2.0",
         "history": "^4.9.0",
         "lodash": "^4.17.15",
+        "patch-package": "^6.4.7",
+        "postinstall-postinstall": "^2.1.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.1.0",
@@ -44,6 +46,7 @@
         "typescript": "^4.1.0"
     },
     "scripts": {
+        "postinstall": "patch-package",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
