--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:14.16
 
+        environment:
+          SKIP_PREFLIGHT_CHECK: 'true'
+
     working_directory: ~/repo
 
     steps:
