--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       
       - run:
           name: Run test with coverage
-          command: yarn test --collectCoverage
+          command: yarn test --runInBand --verbose --coverage=true --forceExit --detectOpenHandles
 
       - run:
           name: upload coverage to coveralls
