--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
         "@typescript-eslint/eslint-plugin": "^4.20.0",
         "@typescript-eslint/parser": "^4.20.0",
         "babel-eslint": "^10.0.2",
+        "coveralls": "^3.1.0",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
         "enzyme-to-json": "^3.3.5",
