--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-i18next": "^11.8.12",
+        "react-hot-toast": "^1.0.2",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
