Add openssrp servier service library

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@onaio/session-reducer": "^0.0.10",
         "@onaio/superset-connector": "^0.0.13",
         "@onaio/utils": "^0.0.1",
+        "@opensrp/server-service": "^0.0.17",
         "bootstrap": "^4.3.1",
         "classnames": "^2.2.6",
         "client-oauth2": "^4.2.5",
@@ -34,8 +35,8 @@
         "postinstall-postinstall": "^2.1.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-i18next": "^11.8.12",
         "react-hot-toast": "^1.0.2",
+        "react-i18next": "^11.8.12",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
