--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "classnames": "^2.2.6",
         "client-oauth2": "^4.2.5",
         "connected-react-router": "^6.5.2",
+        "date-fns": "^2.21.1",
         "fetch-mock": "^7.3.9",
         "flush-promises": "^1.0.2",
         "formik": "^1.5.8",
