--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
         "i18next": "^20.1.0",
         "i18next-browser-languagedetector": "^6.1.0",
         "lodash": "^4.17.15",
+        "moment": "^2.29.1",
         "patch-package": "^6.4.7",
         "postinstall-postinstall": "^2.1.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-i18next": "^11.8.12",
         "react-hot-toast": "^1.0.2",
+        "react-i18next": "^11.8.12",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
