--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@onaio/connected-reducer-registry": "^0.0.1",
         "@onaio/drill-down-table": "^0.0.21",
         "@onaio/gatekeeper": "^0.1.1",
-        "@onaio/list-view": "^0.0.2",
+        "@onaio/list-view": "^0.0.3",
         "@onaio/loaders": "^0.0.1",
         "@onaio/redux-reducer-registry": "^0.0.8",
         "@onaio/session-reducer": "^0.0.10",
@@ -25,6 +25,7 @@
         "connected-react-router": "^6.5.2",
         "cycle": "^1.0.3",
         "date-fns": "^2.21.1",
+        "fast_array_intersect": "^1.1.0",
         "fetch-mock": "^7.3.9",
         "flush-promises": "^1.0.2",
         "formik": "^1.5.8",
