lint react hooks

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,37 +1,39 @@
-  {
+{
     "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "plugin:jest/recommended",
-    "prettier",
-    "plugin:prettier/recommended"
-  ],
-  "plugins": ["@typescript-eslint", "jest"],
-  "env": {
-    "browser": true,
-    "es6": true,
-    "jest": true
-  },
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+        "plugin:@typescript-eslint/recommended",
+        "plugin:jest/recommended",
+        "prettier",
+        "plugin:prettier/recommended"
+    ],
+    "plugins": ["@typescript-eslint", "jest", "react-hooks"],
+    "env": {
+        "browser": true,
+        "es6": true,
+        "jest": true
     },
-    "ecmaVersion": 2018,
-    "sourceType": "module",
-    "project": "./tsconfig.json"
-  },
-  "rules": {
-    "linebreak-style": "off",
-    "@typescript-eslint/explicit-module-boundary-types": 0,
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ]
-  }
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 2018,
+        "sourceType": "module",
+        "project": "./tsconfig.json"
+    },
+    "rules": {
+        "linebreak-style": "off",
+        "@typescript-eslint/explicit-module-boundary-types": 0,
+        "prettier/prettier": [
+            "error",
+            {
+                "endOfLine": "auto"
+            }
+        ],
+        "react-hooks/rules-of-hooks": "error", // Checks Hooks rules
+        "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    }
 }
