Install a few npm packages to help with oauth

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
         "@onaio/list-view": "^0.0.3",
         "@onaio/loaders": "^0.0.1",
         "@onaio/redux-reducer-registry": "^0.0.8",
-        "@onaio/session-reducer": "^0.0.10",
+        "@onaio/session-reducer": "^0.0.12",
         "@onaio/superset-connector": "^0.0.13",
         "@onaio/utils": "^0.0.1",
+        "@opensrp/server-logout": "^0.0.1",
         "@opensrp/server-service": "^0.0.17",
         "bootstrap": "^4.3.1",
         "classnames": "^2.2.6",
