--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,10 @@ REACT_APP_THEME_COLOR=000000
 REACT_APP_DISABLE_LOGIN_PROTECTION=true
 REACT_APP_SUPERSET_FETCH_TIMEOUT_INTERVAL=15000
 REACT_APP_GET_FORM_DATA_ROW_LIMIT=2000
+REACT_APP_BACKEND_ACTIVE='false'
+REACT_APP_EXPRESS_OAUTH_LOGOUT_URL=http://localhost:3000/logout
+REACT_APP_KEYCLOAK_LOGOUT_URL=https://keycloak-stage.smartregister.org/auth/realms/opensrp-web-stage/protocol/openid-connect/logout
+REACT_APP_EXPRESS_OAUTH_GET_STATE_URL=http://localhost:3000/oauth/state
 
 # superset variables
 REACT_APP_SUPERSET_API_BASE=https://discover.ona.io/ 
@@ -15,7 +19,7 @@ REACT_APP_OPENSRP_API_BASE_URL=https://opensrp-miecd-stage.smartregister.org/ope
 REACT_APP_OPENSRP_AUTHORIZATION_URL=https://opensrp-miecd-stage.smartregister.org/opensrp/oauth/authorize
 REACT_APP_OPENSRP_CLIENT_ID=hunter1
 REACT_APP_OPENSRP_USER_URL=https://opensrp-miecd-stage.smartregister.org/opensrp/user-details
-REACT_APP_OPENSRP_LOGOUT_URL='https://opensrp-miecd-stage.smartregister.org/opensrp/logout.do'
+REACT_APP_OPENSRP_LOGOUT_URL=https://opensrp-miecd-stage.smartregister.org/opensrp/logout.do
 REACT_APP_ENABLE_OPENSRP_OAUTH=true
 REACT_APP_REACT_APP_OPENSRP_OAUTH_STATE=opensrp
 
