Add new slices env variables

--- a/.env.sample
+++ b/.env.sample
@@ -44,6 +44,9 @@ REACT_APP_ENABLE_HOME_NAVIGATION=true
 
 # slice IDS
 REACT_APP_SUPERSET_SMS_DATA_SLICE=0
+REACT_APP_LOGFACE_PREGNANCY_SLICE=0
+REACT_APP_NBC_AND_PNC_LOGFACE_SLICE=0
+REACT_APP_NUTRITION_LOGFACE_SLICE=0
 REACT_APP_USER_LOCATION_DATA_SLICE=0
 REACT_APP_PROVINCE_SLICE=0
 REACT_APP_DISTRICT_SLICE=0
