--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@onaio/utils": "^0.0.1",
         "@opensrp/server-logout": "^0.0.1",
         "@opensrp/server-service": "^0.0.17",
+        "@types/react-paginate": "^7.1.0",
         "bootstrap": "^4.3.1",
         "classnames": "^2.2.6",
         "client-oauth2": "^4.2.5",
@@ -39,6 +40,7 @@
         "react-dom": "^16.8.6",
         "react-hot-toast": "^1.0.2",
         "react-i18next": "^11.8.12",
+        "react-paginate": "^7.1.2",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
