--- a/.env.sample
+++ b/.env.sample
@@ -52,3 +52,5 @@ REACT_APP_PROVINCE_SLICE=0
 REACT_APP_DISTRICT_SLICE=0
 REACT_APP_COMMUNE_SLICE=0
 REACT_APP_VILLAGE_SLICE=0
+REACT_APP_CHILD_CHART_SLICE=0
+REACT_APP_MOTHER_CHART_SLICE=0
