--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@onaio/utils": "^0.0.1",
         "@opensrp/server-logout": "^0.0.1",
         "@opensrp/server-service": "^0.0.17",
+        "@reduxjs/toolkit": "^1.5.1",
         "bootstrap": "^4.3.1",
         "classnames": "^2.2.6",
         "client-oauth2": "^4.2.5",
