--- a/.env.sample
+++ b/.env.sample
@@ -47,3 +47,7 @@ REACT_APP_PROVINCE_SLICE=0
 REACT_APP_DISTRICT_SLICE=0
 REACT_APP_COMMUNE_SLICE=0
 REACT_APP_VILLAGE_SLICE=0
+# compartment slices
+REACT_APP_COMPARTMENTS_PREGNANCY_SLICE=0
+REACT_APP_COMPARTMENTS_NBC_AND_PNC_SLICE=0
+REACT_APP_COMPARTMENTS_NUTRITION_SLICE=0
