add react query, upgrade react-router-dom and it's types

--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
         "react-dom": "^16.8.6",
         "react-hot-toast": "^1.0.2",
         "react-i18next": "^11.8.12",
+        "react-query": "^3.16.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
-        "react-router-dom": "^5.0.1",
+        "react-router-dom": "^5.2.0",
         "react-router-last-location": "^2.0.1",
         "react-scripts": "3.4.4",
         "react-select": "^4.3.0",
@@ -109,7 +110,7 @@
         "@types/react-dom": "^16.8.5",
         "@types/react-redux": "^7.1.1",
         "@types/react-router": "^5.0.3",
-        "@types/react-router-dom": "^4.3.4",
+        "@types/react-router-dom": "^5.1.7",
         "@types/react-select": "^4.0.15",
         "@types/redux-testkit": "^1.0.3",
         "@types/seamless-immutable": "^7.1.10",
