--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "i18next": "^20.1.0",
         "i18next-browser-languagedetector": "^6.1.0",
         "lodash": "^4.17.15",
+        "patch-package": "^6.4.7",
+        "postinstall-postinstall": "^2.1.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-hot-toast": "^1.0.2",
@@ -57,6 +59,7 @@
         "typescript": "^4.1.0"
     },
     "scripts": {
+        "postinstall": "patch-package",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
