--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,9 @@
-SKIP_PREFLIGHT_CHECK=true
 REACT_APP_DOMAIN_NAME=http://localhost:3000
 REACT_APP_WEBSITE_NAME=unicef
 REACT_APP_THEME_COLOR=000000
 REACT_APP_DISABLE_LOGIN_PROTECTION=true
-REACT_APP_SUPERSET_FETCH_TIMEOUT_INTERVAL=15000
 REACT_APP_GET_FORM_DATA_ROW_LIMIT=2000
 REACT_APP_BACKEND_ACTIVE=false
-
-# superset variables
-REACT_APP_SUPERSET_API_BASE=https://discover.ona.io/ 
 
 # openSRP variables
 # Authorization
@@ -24,6 +19,36 @@ REACT_APP_OPENSRP_LOGOUT_URL=https://opensrp-miecd-stage.smartregister.org/opens
 REACT_APP_ENABLE_OPENSRP_OAUTH=true
 REACT_APP_REACT_APP_OPENSRP_OAUTH_STATE=opensrp
 
+# superset variables
+
+# superset endpoint
+REACT_APP_SUPERSET_API_BASE=https://discover.ona.io/
+
+# superset fetch timoout
+REACT_APP_SUPERSET_FETCH_TIMEOUT_INTERVAL=15000
+
+# superset data slice IDS
+# unified sms data slice
+REACT_APP_SUPERSET_SMS_DATA_SLICE=0
+# location slices
+REACT_APP_VILLAGE_SLICE=0
+REACT_APP_COMMUNE_SLICE=0
+REACT_APP_DISTRICT_SLICE=0
+REACT_APP_PROVINCE_SLICE=0
+# user location slice
+REACT_APP_USER_LOCATION_DATA_SLICE=0
+# logface slices
+REACT_APP_LOGFACE_PREGNANCY_SLICE=0
+REACT_APP_NBC_AND_PNC_LOGFACE_SLICE=0
+REACT_APP_NUTRITION_LOGFACE_SLICE=0
+# compartments slices
+REACT_APP_COMPARTMENTS_PREGNANCY_SLICE=0
+REACT_APP_COMPARTMENTS_NBC_AND_PNC_SLICE=0
+REACT_APP_COMPARTMENTS_NUTRITION_SLICE=0
+# chat slices
+REACT_APP_CHILD_CHART_SLICE=0
+REACT_APP_MOTHER_CHART_SLICE=0
+
 # enable and disable side menu stuff
 REACT_APP_ENABLE_CLIENTS=false
 REACT_APP_ENABLE_USERS=false
@@ -37,22 +62,7 @@ REACT_APP_ENABLE_ROLE_PAGE=false
 REACT_APP_ENABLE_TEAM_PAGE=false
 REACT_APP_ENABLE_USER_PAGE=false
 REACT_APP_ENABLE_REPORT_MODULE=false
-REACT_APP_ENABLE_PREGNANCY_MODULE = true
+REACT_APP_ENABLE_PREGNANCY_MODULE=true
 REACT_APP_ENABLE_NUTRITION_MODULE=true
 REACT_APP_ENABLE_NBC_AND_PNC_MODULE=true
 REACT_APP_ENABLE_HOME_NAVIGATION=true
-
-# slice IDS
-REACT_APP_SUPERSET_SMS_DATA_SLICE=0
-REACT_APP_LOGFACE_PREGNANCY_SLICE=0
-REACT_APP_NBC_AND_PNC_LOGFACE_SLICE=0
-REACT_APP_NUTRITION_LOGFACE_SLICE=0
-REACT_APP_USER_LOCATION_DATA_SLICE=0
-REACT_APP_PROVINCE_SLICE=0
-REACT_APP_DISTRICT_SLICE=0
-REACT_APP_COMMUNE_SLICE=0
-REACT_APP_VILLAGE_SLICE=0
-# compartment slices
-REACT_APP_COMPARTMENTS_PREGNANCY_SLICE=0
-REACT_APP_COMPARTMENTS_NBC_AND_PNC_SLICE=0
-REACT_APP_COMPARTMENTS_NUTRITION_SLICE=0
