--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "i18next": "^20.1.0",
         "i18next-browser-languagedetector": "^6.1.0",
         "lodash": "^4.17.15",
+        "query-string": "^7.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-hot-toast": "^1.0.2",
