Add @opensrp packages

--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
         "@onaio/session-reducer": "^0.0.12",
         "@onaio/superset-connector": "^0.0.13",
         "@onaio/utils": "^0.0.1",
+        "@opensrp/keycloak-service": "^0.0.15",
+        "@opensrp/location-management": "^0.0.12",
+        "@opensrp/pkg-config": "^0.0.9",
         "@opensrp/server-logout": "^0.0.1",
         "@opensrp/server-service": "^0.0.17",
+        "@opensrp/store": "^0.0.10",
+        "@opensrp/team-assignment": "^0.0.3",
+        "@opensrp/team-management": "^0.0.6",
+        "@opensrp/user-management": "^0.1.15",
         "@reduxjs/toolkit": "^1.5.1",
         "bootstrap": "^4.3.1",
         "classnames": "^2.2.6",
@@ -41,8 +48,8 @@
         "react-dom": "^16.8.6",
         "react-hot-toast": "^1.0.2",
         "react-i18next": "^11.8.12",
-        "react-query": "^3.16.0",
         "react-paginate": "^7.1.2",
+        "react-query": "^3.16.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.2.0",
