--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
         "@onaio/superset-connector": "^0.0.13",
         "@onaio/utils": "^0.0.1",
         "@opensrp/keycloak-service": "^0.0.15",
-        "@opensrp/location-management": "^0.0.12",
+        "@opensrp/location-management": "^0.0.13",
         "@opensrp/pkg-config": "^0.0.9",
         "@opensrp/server-logout": "^0.0.1",
         "@opensrp/server-service": "^0.0.17",
         "@opensrp/store": "^0.0.10",
-        "@opensrp/team-assignment": "^0.0.3",
-        "@opensrp/team-management": "^0.0.6",
-        "@opensrp/user-management": "^0.1.15",
+        "@opensrp/team-assignment": "^0.0.4",
+        "@opensrp/team-management": "^0.0.7",
+        "@opensrp/user-management": "^0.1.16",
         "@reduxjs/toolkit": "^1.5.1",
+        "antd": "^4.16.2",
         "bootstrap": "^4.3.1",
         "classnames": "^2.2.6",
         "client-oauth2": "^4.2.5",
@@ -44,10 +45,12 @@
         "i18next-browser-languagedetector": "^6.1.0",
         "lodash": "^4.17.15",
         "query-string": "^7.0.0",
+        "rc-menu": "^9.0.11",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-hot-toast": "^1.0.2",
         "react-i18next": "^11.8.12",
+        "react-minimal-side-navigation": "^1.8.0",
         "react-paginate": "^7.1.2",
         "react-query": "^3.16.0",
         "react-redux": "^7.1.0",
@@ -64,7 +67,8 @@
         "seamless-immutable": "^7.1.4",
         "snapshot-diff": "^0.5.2",
         "tree-model": "^1.0.7",
-        "typescript": "^4.1.0"
+        "typescript": "^4.1.0",
+        "use-deep-compare-effect": "^1.6.1"
     },
     "scripts": {
         "start": "react-scripts start",
