--- a/.env.sample
+++ b/.env.sample
@@ -69,3 +69,5 @@ REACT_APP_ENABLE_HOME_NAVIGATION=true
 REACT_APP_SUPERSET_PREGNANCY_ANALYSIS_DASHBOARD=0
 REACT_APP_SUPERSET_NBC_AND_PNC_ANALYSIS_DASHBOARD=0
 REACT_APP_SUPERSET_NUTRITION_ANALYSIS_DASHBOARD=0
+REACT_APP_DEFAULT_PLAN_ID=uuid
+REACT_APP_KEYCLOAK_USERS_PAGE_SIZE=10
