Update env variables

--- a/.env.sample
+++ b/.env.sample
@@ -66,3 +66,6 @@ REACT_APP_ENABLE_PREGNANCY_MODULE=true
 REACT_APP_ENABLE_NUTRITION_MODULE=true
 REACT_APP_ENABLE_NBC_AND_PNC_MODULE=true
 REACT_APP_ENABLE_HOME_NAVIGATION=true
+REACT_APP_SUPERSET_PREGNANCY_ANALYSIS_DASHBOARD=0
+REACT_APP_SUPERSET_NBC_AND_PNC_ANALYSIS_DASHBOARD=0
+REACT_APP_SUPERSET_NUTRITION_ANALYSIS_DASHBOARD=0
