Update @opensrp packages

--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
         "@onaio/session-reducer": "^0.0.12",
         "@onaio/superset-connector": "^0.0.13",
         "@onaio/utils": "^0.0.1",
-        "@opensrp/keycloak-service": "^0.0.16",
-        "@opensrp/location-management": "^0.0.14",
-        "@opensrp/pkg-config": "^0.0.9",
-        "@opensrp/server-logout": "^0.0.1",
-        "@opensrp/server-service": "^0.0.17",
-        "@opensrp/store": "^0.0.10",
-        "@opensrp/team-assignment": "^0.0.5",
-        "@opensrp/team-management": "^0.0.8",
-        "@opensrp/user-management": "^0.1.18",
+        "@opensrp/keycloak-service": "0.0.17",
+        "@opensrp/location-management": "0.0.15",
+        "@opensrp/pkg-config": "0.0.9",
+        "@opensrp/server-logout": "0.0.1",
+        "@opensrp/server-service": "0.0.17",
+        "@opensrp/store": "0.0.10",
+        "@opensrp/team-assignment": "0.0.6",
+        "@opensrp/team-management": "0.0.9",
+        "@opensrp/user-management": "0.1.19",
         "@reduxjs/toolkit": "^1.5.1",
         "antd": "^4.16.2",
         "bootstrap": "^4.3.1",
